--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.0",
   "description": "A simple webcrawler written in JavaScript",
   "main": "server.js",
+  "scripts": {
+  "start": "node app.js",
+},
   "author": "Jiaqi",
   "dependencies": {
     "cheerio": "^0.19.0",
     "body-parser": "~1.15.2",
     "url-parse": "^1.0.5",
-    "express-handlebars" : "*",
+    "express-handlebars": "*",
     "request": "^2.65.0",
     "express": "~4.14.0",
     "cookie-parser": "1.3.2",
