--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple webcrawler written in JavaScript",
   "main": "server.js",
   "scripts": {
-  "start": "node app.js",
+  "start": "node app.js"
 },
   "author": "Jiaqi",
   "dependencies": {
